# kshetra

./: LICENSE  README.md  dfx.json  package-lock.json  package.json
backend/: Cargo.toml  DOCUMENT_STORAGE_API.md  IMPLEMENTATION_SUMMARY.md  README.md  land_registry.did
backend/.cargo/: config.toml
backend/src/: dip721.rs  document_storage.rs  lib.rs  storage.rs  types.rs
frontend/: .babelrc  .env.development  AUTHSERVICE_TEST_SUMMARY.md  PRINCIPAL_IMPORT_AUDIT_REPORT.md  README.md  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: AdminDashboard.css  AdminDashboard.tsx  Auth.css  AuthButton.tsx  Home.css  Home.tsx  NotFound.css  NotFound.tsx  ParcelDetails.css  ParcelDetails.tsx  ParcelForm.css  ParcelForm.tsx  ParcelList.css  ParcelList.tsx  ProtectedRoute.tsx  SearchFilters.css  SearchFilters.tsx  TransferForm.css  TransferForm.tsx  TransferManagement.css  TransferManagement.tsx  UserDashboard.css  UserDashboard.tsx
frontend/src/declarations/backend/: index.ts
frontend/src/hooks/: useAuth.ts  useLandRegistry.ts
frontend/src/services/: AuthService.demo.js  AuthService.integration.test.ts  AuthService.simple.test.ts  AuthService.test.ts  AuthService.ts  LandRegistryService.ts  LandRegistryService.updated.ts
frontend/src/types/: index.ts
src/backend/: Cargo.toml  backend.did
src/backend/src/: lib.rs
src/frontend/: index.html  package.json  vite.config.js
src/frontend/public/: .ic-assets.json5
src/frontend/src/: App.jsx  actor.js  identity.js  index.scss  main.jsx
src/frontend/src/animations/: gsapScroll.js  (+1 more)
(+48 files in other folders)
