[package]
name = "land-registry"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-macros = "0.9"
ic-stable-structures = "0.6"
ic-certified-map = "0.4"
sha2 = "0.10"
hex = "0.4"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
